# claude

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-docker.yml
data/: .gitkeep
src/: config.rs  main.rs
src/db/: accounts.rs  mod.rs  schema.rs  skins.rs
src/game/: engine.rs  food.rs  mod.rs  physics.rs  player.rs  world.rs
src/protocol/: messages.rs
src/server/: http.rs  ws.rs
static/: game.js  index.html  style.css  ui.js
