[package]
name = "agario-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
password-hash = "0.5"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
time = "0.3"
